fix: blockquote not showing properly

--- a/src/theme/css/wiki-themes/discord-messages.css
+++ b/src/theme/css/wiki-themes/discord-messages.css
@@ -5,3 +5,8 @@
 .discord-messages {
     border-radius: 10px;
 }
+
+.discord-quote-container > blockquote {
+    background-color: transparent !important;
+    border: none !important;
+}
